--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,12 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Custom ignores - markdown, SQL, and environment files
+*.md
+*.sql
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
